# vql

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  VQL Prompts.txt  aiActionsViaUi.md  architecture.md  canonicalCmds.json  claude-vql-include.md  index.html  install.sh  llm-guidance.md  principles.md  test principles with spaces.md  test_principles.md  vsCodeBrief.md
.cargo/: config.toml
Archive - IGNORE/: claude-vql-commands.md  models.vql.ref  vql-reference.md
Archive-IGNORE/: controllers.vql.ref  principles.md  uis.vql.ref  updated_principles.md  vql-workflows.md
mcp-server/: .gitignore  README.md  example-claude-config.json  package-lock.json  package.json
mcp-server/src/: index.ts
src/: lib.rs  main.rs
src/commands/: add.rs  check.rs  compare.rs  export.rs  init.rs  json_commands.rs  metrics.rs  mod.rs  prepare.rs  set.rs  store.rs  vql.rs
src/models/: asset.rs  config.rs  json_storage.rs  mod.rs
src/tests/: mod.rs  test_llm_command.rs
src/utils/: filesystem.rs  mod.rs  parser.rs  path.rs  platform.rs
testVSCodeUI/: decorationProvider.ts
testVSCodeUI/src/: extension.ts  storageReader.ts  storageWatcher.ts  types.ts
test_dir/VQL/: vql_storage.json
vscode-extension/: .eslintrc.json  CLAUDE.md  README.md  aiActionsViaUi.md  package-lock.json  package.json
vscode-extension/src/: README.md  decorationProvider.ts  extension.ts  matrixViewProvider.ts  storageReader.ts  storageWatcher.ts  types.ts  vqlMetadataProvider.ts  vqlTreeProvider.ts
