[package]
name = "vql"
version = "0.1.0"
edition = "2021"
authors = ["11Plus Team"]
description = "Vibe Query Language CLI for architectural governance"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
md5 = "0.7"
fs_extra = "1.3"
colored = "2.0"
atty = "0.2.14"

[lib]
name = "vql"
path = "src/lib.rs"

[[bin]]
name = "vql"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
